Fix text and image layout issues

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@ body {
   background: linear-gradient(rgb(0, 0, 0), rgb(13, 30, 44));
   max-width: 100vh;
   margin: 0 auto;
+  padding: 0 1.5em;
+}
+
+#index-body {
+  background: rgb(0, 0, 0);
+  margin-top: 40px;
 }
 
 p,
@@ -23,30 +29,24 @@ ul {
   font-weight: 400;
 }
 
-#index-body {
-  background: rgb(0, 0, 0);
-  margin-top: 70px;
-}
-
 div {
   padding: 0% 1% 0% 1%;
 }
 
-img.index-image {
-  width: 750px;
-  max-width: 100%;
-  height: auto;
-  margin: 15px auto;
-  margin-bottom: -5px;
-}
-
-img {
+img,
+.index-image {
   display: block;
   width: 900px;
-  max-width: 105%;
+  max-width: 100%;
   height: auto;
   margin: 30px 0 20px 0;
   border-radius: 10px;
+}
+
+img.index-image {
+  width: 950px;
+  height: auto;
+  margin: 15px auto -5px auto;
 }
 
 p.parting-note {
@@ -56,9 +56,8 @@ p.parting-note {
 
 hr {
   border: 0;
-  height: 1px;
+  height: 2px;
   background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
-  margin: 0 0 -6px 0;
 }
 
 #header {
